<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">appStduy</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" tools:ignore="MissingTranslation">First Fragment</string>
    <string name="second_fragment_label" tools:ignore="MissingTranslation">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="to_quiz" tools:ignore="ExtraTranslation">TO QUIZ</string>
    <string name="to_dashboard" tools:ignore="ExtraTranslation">TO DASHBOARD</string>
    <string name="quiz_activity">QUIZ</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>

    <string name="question_turkey">Constantinople is the largest city in Turkey?</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt. </string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\' s oldest and deepest freshwater lake.</string>

    <string name="warning_text">Are you sure you want to do this? </string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="cheat_button">CHEAT!</string>
    <string name="judgment_toast">Cheating is wrong. </string>
    <string name="to_hilink" translatable="false">TO Hilink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hilink_fragment_label" translatable="false">Hilink</string>

    <string name="title_activity_dashboard" translatable="false">DashboardActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>

    <string name="crime_title_hint" translatable="false">Enter a title for the crime.</string>
    <string name="crime_title_label" translatable="false">Title</string>
    <string name="crime_details_label" translatable="false">Details</string>
    <string name="crime_solved_label" translatable="false">Solved</string>
    <string name="to_crime_list" translatable="false">To Crime</string>
    <string name="crime_activity_label" translatable="false">Crime</string>
</resources>