<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:lineSpacingExtra="10sp"
            android:padding="24dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#9C27B0"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/true_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/true_button"
                android:textColor="#00796B"/>


            <Button
                android:id="@+id/false_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_button"
                android:textColor="#00796B"/>
        </LinearLayout>

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheat_button" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/arrow_left"
                android:drawablePadding="4dp"
                android:text="@string/prev_button"
                android:textColor="#00796B" />

            <Button
                android:id="@+id/next_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/arrow_right"
                android:drawablePadding="4dp"
                android:text="@string/next_button"
                android:textColor="#00796B"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>